# spotify-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
src/spotify_pipeline/: config.py  main.py
src/spotify_pipeline/extract/: albums.py  artists.py  auth.py  tracks.py
src/spotify_pipeline/gold/: top_artists.py
src/spotify_pipeline/load/: s3.py
src/spotify_pipeline/transform/: albums.py  artists.py  quality.py  tracks.py
src/spotify_pipeline/utils/: decorators.py  logger.py  spotify_client.py
