[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spotify-pipeline"
version = "0.1.0"
description = "Spotify Data Engineering Pipeline - Bronze/Silver/Gold Medallion Architecture"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28,<3.0",
    "boto3>=1.28,<2.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "pandas>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.hatch.build.targets.wheel]
packages = ["src/spotify_pipeline"]